# vericoin

./: .appveyor.yml  .cirrus.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  INSTALL.md  Makefile.am  README  README.md  VERSION.json  configure.ac  vericoin-qt.pro  vericoin.conf
build_msvc/: .gitignore  README.md  bitcoin_config.h  msvc-autogen.py  vcpkg-packages.txt  vericoin.sln  verium.sln
contrib/: README.md  bitcoin-qt.pro  valgrind.supp
doc/: Doxyfile.in  JSON-RPC-interface.md  README  README.md  README_osx.txt  README_windows.txt  README~  REST-interface.md  assets-attribution.md  benchmarking.md  build-freebsd.md  build-msw.txt  build-netbsd.md  build-openbsd.md  build-osx.md  build-osx.txt  build-unix.md  build-unix.txt  build-windows.md  chainspecs  dependencies.md  dnsseed-policy.md  files.md  init.md  productivity.md  rapidcheck.md  readme-qt.rst  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_strings_policy.md  verium-conf.md  zmq.md
doc/man/: Makefile.am  vericoin-cli.1  vericoin-qt.1  vericoin-tx.1  vericoin-wallet.1  vericoind.1  verium-cli.1  verium-qt.1  verium-tx.1  verium-wallet.1  veriumd.1
docker/: Dockerfile
release/: linux_setup_builder.sh  macx_setup_builder.sh  windows_setup_builder.iss
share/: setup.nsi  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  alert.cpp  amount.h  arith_uint256.cpp  base58.h  bignum.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  db.cpp  (+87 more)
(+427 files in other folders)
